# super-duper

./: .env  .env.example  .gitignore  .prettierrc.toml  CLAUDE.md  Cargo.toml  Config.toml  README.md  ROADMAP.md  SuperDuper.lnk  build.bat  dev-notes.md  err.txt  path_part_prompts.txt  path_parts.csv  ralph-add.sh  ralph-status.sh  ralph-stop.sh  ralph.sh  run.bat  stats.csv  stats.xlsx  super_duper.db-shm  super_duper.db-wal
.claude/: ralph-loop.local.md  settings.local.json
.ralph/: DONE  RALPH.md  backlog.json  progress.md  state.json
crates/: CLAUDE.md
crates/super-duper-cli/: Cargo.toml
crates/super-duper-cli/src/: commands.rs  logging.rs  main.rs  progress.rs
crates/super-duper-core/: Cargo.toml
crates/super-duper-core/src/: config.rs  engine.rs  error.rs  lib.rs  progress.rs
crates/super-duper-core/src/analysis/: deletion_plan.rs  dir_fingerprint.rs  dir_similarity.rs  file_dupes.rs  mod.rs
crates/super-duper-core/src/hasher/: cache.rs  mod.rs  xxhash.rs
crates/super-duper-core/src/platform/: mod.rs  windows.rs
crates/super-duper-core/src/scanner/: mod.rs  walk.rs
crates/super-duper-core/src/storage/: mod.rs  models.rs  queries.rs  schema.sql  sqlite.rs
crates/super-duper-core/tests/: analysis_tests.rs  e2e_pipeline_tests.rs  storage_tests.rs
crates/super-duper-ffi/: Cargo.toml  build.rs  cbindgen.toml  super_duper.h
crates/super-duper-ffi/src/: actions.rs  callbacks.rs  error.rs  handle.rs  lib.rs  queries.rs  types.rs
crates/super-duper-ffi/tests/: ffi_tests.rs
migrations/2024-03-19-052940_create_duplicates_table/: down.sql  up.sql
migrations/2024-04-06-005228_create_tables/: down.sql  up.sql
src/: app_config.rs  cli.rs  config.rs  debug.rs  logging.rs  main.rs  model.rs  scan_and_store.rs  status.rs  test1.rs
src/db/: dedupe_session.rs  dupe_file.rs  dupe_file_part.rs  mod.rs  part_path copy.rs  part_path.rs  part_path_hash.rs  part_path_hash_perf.rs  pg.rs  schema.rs  sd_pg.rs  test1.rs  tmp.rs
src/file_cache/: cache_file.rs  mod copy.rs  mod.rs  old_cache.rs
src/file_proc/: debug.rs  dupes.rs  file_info.rs  hash copy.rs  hash.rs  mod.rs  process.rs  scan.rs  scan_dir.rs  stats.rs  status.rs
src/file_proc/hash/: hash_cache.rs  mod.rs
src/file_proc/hash/builders/: default.rs  mod.rs  rayon-v1.rs  rayon.rs
src/file_proc/status/: handler.rs  mod.rs  progress_bars.rs  types.rs
src/file_proc/status/_junk/: status copy 2.rs  status copy 3.rs  status copy 4.rs  status copy 5.rs  status copy 6.rs  status copy 7.rs  status copy.rs  status sort of works.rs
src/file_proc/win/: mod.rs
src/store/: dedupe_session.rs  dupe_file.rs  dupe_file_part.rs  mod.rs  pg.rs  schema.rs  sd_store.rs
src/utils/: mod.rs  path.rs  prompt.rs  stats.rs
ui/windows/: SuperDuper.sln
ui/windows/SuperDuper/: App.xaml  App.xaml.cs  CLAUDE.md  Directory.Build.targets  InvertBoolConverter.cs  MainWindow.xaml  MainWindow.xaml.cs  SuperDuper.csproj  SuperDuper.csproj.bak  TaskExtensions.cs  XamlTypeInfo.cs  app.manifest  msbuild.binlog  super_duper.db-shm  super_duper.db-wal
ui/windows/SuperDuper/Controls/: ComparisonPane.xaml  ComparisonPane.xaml.cs  DensityBadge.xaml.cs  DirectoryTreeControl.xaml  DirectoryTreeControl.xaml.cs  DuplicateCard.xaml  DuplicateCard.xaml.cs  FileListControl.xaml  FileListControl.xaml.cs  ScanProgressOverlay.xaml  ScanProgressOverlay.xaml.cs  StorageTreemap.xaml  StorageTreemap.xaml.cs
ui/windows/SuperDuper/Converters/: DensityToColorConverter.cs  FileSizeConverter.cs  ReviewStatusToIconConverter.cs
ui/windows/SuperDuper/Models/: DatabaseModels.cs  Enums.cs  FileTypeFilters.cs  FilterChip.cs  ScanProfile.cs  SessionPickerItem.cs  ShortcutDefinitions.cs  UndoActions.cs
ui/windows/SuperDuper/NativeMethods/: EngineWrapper.cs  SuperDuperEngine.cs
ui/windows/TestHarness/: Program.cs  TestHarness.csproj
(+53 files in other folders)
