[package]
name = "super-duper-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
config = "0.14.0"
console = "0.15.8"
csv = "1.3.0"
dashmap = "5.5.3"
diesel = { version = "2.1.0", features = [
  "postgres",
  "chrono",
  "numeric",
  #  "64-column-tables",
] }
dotenv = "0.15.0"
glob = "0.3.1"
indicatif = "0.17.8"
lazy_static = "1.4.0"
performance_measure = "2.0.0"
rayon = "1.10.0"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tabled = { version = "0.15.0", features = ["ansi"] }
tempfile = "3.10.1"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
twox-hash = "1.6.3"
