[package]
name = "super-duper-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration
config = "0.14.0"
toml = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
glob = "0.3"

# Parallelism
rayon = "1.9"
dashmap = "5.5"

# Hashing
twox-hash = "1.6"

# Cache
rocksdb = "0.22"
bincode = "1.3"
lazy_static = "1.4"

# Database (SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Collections
ahash = "0.8.11"

# Time
chrono = "0.4.37"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi",
    "handleapi",
    "winnt",
    "minwindef",
    "winerror",
] }
